--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<section class="intro">
 						<header>
 							<h1>Carlos Diaz</h1>
-							<p>Your sound guy</p>
+							<p>Sound Engineer</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -37,10 +37,12 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>BIO</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>I am a Paris-based sound engineer</strong> and former software engineer, working across production, recording, mixing, mastering, and live sound. I graduated major of my class at Abbey Road Institute Paris, where I built a strong foundation in both the technical and creative sides of music production.</p>
+							<p>Before moving into audio, I worked in software engineering and research — an experience that shaped my precision, curiosity, and problem-solving mindset. Today, I love combining that analytical background with a deep passion for sound and collaboration.</p>
+							<p>I’m an affable, communicative person who thrives in environments where technology and art intersect — whether in the studio, on stage, or in experimental projects that push the boundaries of how we experience sound.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -108,7 +110,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script> -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.5/p5.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.trunk.min.js"></script>
 			<script>
