--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Carlos Diaz</h1>
+							<h1>Carlos Díaz</h1>
 							<p>Sound Engineer</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -43,7 +43,7 @@
 							<p><strong>I am a Paris-based sound engineer</strong> and former software engineer, working across production, recording, mixing, mastering, and live sound. I graduated major of my class at Abbey Road Institute Paris, where I built a strong foundation in both the technical and creative sides of music production.</p>
 							<p>Before moving into audio, I worked in software engineering and research — an experience that shaped my precision, curiosity, and problem-solving mindset. Today, I love combining that analytical background with a deep passion for sound and collaboration.</p>
 							<p>I’m an affable, communicative person who thrives in environments where technology and art intersect — whether in the studio, on stage, or in experimental projects that push the boundaries of how we experience sound.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2200725155&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/caelosx" title="Caelos" target="_blank" style="color: #cccccc; text-decoration: none;">Caelos</a> · <a href="https://soundcloud.com/caelosx/permission" title="Permission" target="_blank" style="color: #cccccc; text-decoration: none;">Permission</a></div>
 						</div>
 					</section>
 				<!-- Section -->
@@ -52,25 +52,6 @@
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
-							<form>
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-							</form>
-						</div>
-						<footer>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
@@ -81,10 +62,6 @@
 									<a>+33 7 79 46 99 97</a>
 								</li>
 								<li>
-									<h3>Address</h3>
-									<span>Paris, France</span>
-								</li>
-								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
 										<li><a href="https://www.instagram.com/carlos.herz/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -93,11 +70,11 @@
 									</ul>
 								</li>
 							</ul>
-						</footer>
+						</div>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Carlos Díaz Hernández. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
