animation on mobile

--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
 			<script>
 				VANTA.TRUNK({
 					el: "#wrapper",
-					mouseControls: false,
-					touchControls: false,
-					gyroControls: false,
+					mouseControls: true,
+					touchControls: true,
+					gyroControls: true,
 					minHeight: 500.00,
 					minWidth: 500.00,
 					scale: 1.00,
 					scaleMobile: 1.00,
 					color: 0x912535,
 					backgroundColor: 0x273441,
-					spacing: 15.00,
-					chaos: 9.50
-					})
+					spacing: 9.00,
+					chaos: 8
+				})
 			</script>
 	</body>
 </html>
