Update library version

--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
 			<script src="assets/js/main.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.5/p5.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.trunk.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.trunk.min.js"></script>
 			<script>
 				VANTA.TRUNK({
 					el: "#wrapper",
 					mouseControls: true,
 					touchControls: true,
 					gyroControls: true,
-					minHeight: 500.00,
-					minWidth: 500.00,
+					minHeight: 200.00,
+					minWidth: 200.00,
 					scale: 1.00,
 					scaleMobile: 1.00,
 					color: 0x912535,
 					backgroundColor: 0x273441,
-					spacing: 15.00,
-					chaos: 10
+					spacing: 10.00,
+					chaos: 7
 				})
 			</script>
 	</body>
