--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.5/p5.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.trunk.min.js"></script>
-			<script>
+			<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script> -->
+			<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.5/p5.min.js"></script> -->
+			<!-- <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.trunk.min.js"></script> -->
+			<!-- <script>
 				VANTA.TRUNK({
 					el: "#wrapper",
 					mouseControls: true,
@@ -106,6 +106,6 @@
 					spacing: 10.00,
 					chaos: 7
 				})
-			</script>
+			</script> -->
 	</body>
 </html>
